--- a/package.json
+++ b/package.json
@@ -7,7 +7,16 @@
   "websiteURL": "https://sudo-flix.lol/",
   "main": "mods/userscript.js",
   "author": "Owen Ramaekers",
-  "keys": ["MediaPlayPause"],
+  "keys": [
+    "MediaPlayPause",
+    "MediaPlay",
+    "MediaPause",
+    "MediaStop",
+    "MediaTrackPrevious",
+    "MediaTrackNext",
+    "MediaRewind",
+    "MediaFastForward"
+  ],
   "repository": {
     "url": "https://github.com/owen-the-kid/sudo-flix-tv"
   }
