--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@owenthekid/sudo-flix",
   "appName": "Sudo-Flix TV",
   "version": "0.0.1",
-  "description": "SudoFlix",
+  "description": "SudoFlix [Test 0]",
   "packageType": "mods",
   "websiteURL": "https://movie.zzylos.lol/",
   "main": "mods/userscript.js",
